// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormContainerChangePassword
    clearElement={[MockFunction]}
    currentForm="profileForm"
    handleInputValueError={[Function]}
    headerWidthBufferRight={10}
    height={0}
    heightRef={[MockFunction]}
    inputs={
      Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      }
    }
    mediaWidth={874}
    rowHeight={60}
    rowHeightBuffer={18}
    rowWidthIndent={10}
    setHeight={
      [MockFunction] {
        "calls": Array [
          Array [
            "changePasswordForm",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    statusAuth={
      Object {
        "authStatusChangePassword": Object {
          "id": "authStatusChangePassword",
          "status": "IDLE",
        },
        "authStatusDeleteAccount": Object {
          "id": "authStatusDeleteAccount",
          "status": "SUCCESS",
        },
        "authStatusForgotPassword": Object {
          "id": "authStatusForgotPassword",
          "status": "IDLE",
        },
        "authStatusLogin": Object {
          "id": "authStatusLogin",
          "status": "IDLE",
        },
        "authStatusLoginMFA": Object {
          "id": "authStatusLoginMFA",
          "status": "IDLE",
        },
        "authStatusLogout": Object {
          "id": "authStatusLogout",
          "status": "SUCCESS",
        },
        "authStatusResetPassword": Object {
          "id": "authStatusResetPassword",
          "status": "IDLE",
        },
        "authStatusSignOutDevices": Object {
          "id": "authStatusSignOutDevices",
          "status": "IDLE",
        },
        "authStatusSignUp": Object {
          "id": "authStatusSignUp",
          "status": "IDLE",
        },
        "authStatusVerifyEmail": Object {
          "id": "authStatusVerifyEmail",
          "status": "IDLE",
        },
        "authStatusVerifyEmailLink": Object {
          "id": "authStatusVerifyEmailLink",
          "status": "IDLE",
        },
        "authStatusVerifyPhone": Object {
          "id": "authStatusVerifyPhone",
          "status": "IDLE",
        },
        "authStatusVerifyPhoneCode": Object {
          "id": "authStatusVerifyPhoneCode",
          "status": "IDLE",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "currentFormBool": false,
      "handleInputChange": [Function],
      "headerWidthBufferRight": 10,
      "heightRef": [MockFunction],
      "inputs": Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      },
      "mediaWidth": 874,
      "rowHeight": 60,
      "rowHeightBuffer": 18,
      "rowWidthIndent": 10,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "currentFormBool": false,
        "handleInputChange": [Function],
        "headerWidthBufferRight": 10,
        "heightRef": [MockFunction],
        "inputs": Object {
          "changePasswordNewPassword": Object {
            "errorMessage": "",
            "id": "changePasswordNewPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
          "changePasswordNewPassword2": Object {
            "errorMessage": "",
            "id": "changePasswordNewPassword2",
            "parentId": "changePasswordForm",
            "value": "",
          },
          "changePasswordOldPassword": Object {
            "errorMessage": "",
            "id": "changePasswordOldPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
        },
        "mediaWidth": 874,
        "rowHeight": 60,
        "rowHeightBuffer": 18,
        "rowWidthIndent": 10,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
    "hydrateIn": undefined,
  },
}
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly and calls handleInputChange, with invalid password error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormContainerChangePassword
    clearElement={[MockFunction]}
    currentForm="profileForm"
    handleInputValueError={[Function]}
    headerWidthBufferRight={10}
    height={0}
    heightRef={[MockFunction]}
    inputs={
      Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "Please enter a password containing at least 8 characters, one of the following special characters, $@!%*#?&, one letter, and one number.",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "test",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      }
    }
    mediaWidth={874}
    rowHeight={60}
    rowHeightBuffer={18}
    rowWidthIndent={10}
    setHeight={
      [MockFunction] {
        "calls": Array [
          Array [
            "changePasswordForm",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    statusAuth={
      Object {
        "authStatusChangePassword": Object {
          "id": "authStatusChangePassword",
          "status": "IDLE",
        },
        "authStatusDeleteAccount": Object {
          "id": "authStatusDeleteAccount",
          "status": "SUCCESS",
        },
        "authStatusForgotPassword": Object {
          "id": "authStatusForgotPassword",
          "status": "IDLE",
        },
        "authStatusLogin": Object {
          "id": "authStatusLogin",
          "status": "IDLE",
        },
        "authStatusLoginMFA": Object {
          "id": "authStatusLoginMFA",
          "status": "IDLE",
        },
        "authStatusLogout": Object {
          "id": "authStatusLogout",
          "status": "SUCCESS",
        },
        "authStatusResetPassword": Object {
          "id": "authStatusResetPassword",
          "status": "IDLE",
        },
        "authStatusSignOutDevices": Object {
          "id": "authStatusSignOutDevices",
          "status": "IDLE",
        },
        "authStatusSignUp": Object {
          "id": "authStatusSignUp",
          "status": "IDLE",
        },
        "authStatusVerifyEmail": Object {
          "id": "authStatusVerifyEmail",
          "status": "IDLE",
        },
        "authStatusVerifyEmailLink": Object {
          "id": "authStatusVerifyEmailLink",
          "status": "IDLE",
        },
        "authStatusVerifyPhone": Object {
          "id": "authStatusVerifyPhone",
          "status": "IDLE",
        },
        "authStatusVerifyPhoneCode": Object {
          "id": "authStatusVerifyPhoneCode",
          "status": "IDLE",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "currentFormBool": false,
      "handleInputChange": [Function],
      "headerWidthBufferRight": 10,
      "heightRef": [MockFunction],
      "inputs": Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "Please enter a password containing at least 8 characters, one of the following special characters, $@!%*#?&, one letter, and one number.",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "test",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      },
      "mediaWidth": 874,
      "rowHeight": 60,
      "rowHeightBuffer": 18,
      "rowWidthIndent": 10,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "currentFormBool": false,
        "handleInputChange": [Function],
        "headerWidthBufferRight": 10,
        "heightRef": [MockFunction],
        "inputs": Object {
          "changePasswordNewPassword": Object {
            "errorMessage": "Please enter a password containing at least 8 characters, one of the following special characters, $@!%*#?&, one letter, and one number.",
            "id": "changePasswordNewPassword",
            "parentId": "changePasswordForm",
            "value": "test",
          },
          "changePasswordNewPassword2": Object {
            "errorMessage": "",
            "id": "changePasswordNewPassword2",
            "parentId": "changePasswordForm",
            "value": "",
          },
          "changePasswordOldPassword": Object {
            "errorMessage": "",
            "id": "changePasswordOldPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
        },
        "mediaWidth": 874,
        "rowHeight": 60,
        "rowHeightBuffer": 18,
        "rowWidthIndent": 10,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
    "hydrateIn": undefined,
  },
}
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly and calls handleInputChange, with no match password 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormContainerChangePassword
    clearElement={[MockFunction]}
    currentForm="profileForm"
    handleInputValueError={[Function]}
    headerWidthBufferRight={10}
    height={0}
    heightRef={[MockFunction]}
    inputs={
      Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "testPassword1!",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "This password does not match your password above.",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "testPassword1!",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      }
    }
    mediaWidth={874}
    rowHeight={60}
    rowHeightBuffer={18}
    rowWidthIndent={10}
    setHeight={
      [MockFunction] {
        "calls": Array [
          Array [
            "changePasswordForm",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    statusAuth={
      Object {
        "authStatusChangePassword": Object {
          "id": "authStatusChangePassword",
          "status": "IDLE",
        },
        "authStatusDeleteAccount": Object {
          "id": "authStatusDeleteAccount",
          "status": "SUCCESS",
        },
        "authStatusForgotPassword": Object {
          "id": "authStatusForgotPassword",
          "status": "IDLE",
        },
        "authStatusLogin": Object {
          "id": "authStatusLogin",
          "status": "IDLE",
        },
        "authStatusLoginMFA": Object {
          "id": "authStatusLoginMFA",
          "status": "IDLE",
        },
        "authStatusLogout": Object {
          "id": "authStatusLogout",
          "status": "SUCCESS",
        },
        "authStatusResetPassword": Object {
          "id": "authStatusResetPassword",
          "status": "IDLE",
        },
        "authStatusSignOutDevices": Object {
          "id": "authStatusSignOutDevices",
          "status": "IDLE",
        },
        "authStatusSignUp": Object {
          "id": "authStatusSignUp",
          "status": "IDLE",
        },
        "authStatusVerifyEmail": Object {
          "id": "authStatusVerifyEmail",
          "status": "IDLE",
        },
        "authStatusVerifyEmailLink": Object {
          "id": "authStatusVerifyEmailLink",
          "status": "IDLE",
        },
        "authStatusVerifyPhone": Object {
          "id": "authStatusVerifyPhone",
          "status": "IDLE",
        },
        "authStatusVerifyPhoneCode": Object {
          "id": "authStatusVerifyPhoneCode",
          "status": "IDLE",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "currentFormBool": false,
      "handleInputChange": [Function],
      "headerWidthBufferRight": 10,
      "heightRef": [MockFunction],
      "inputs": Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "testPassword1!",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "This password does not match your password above.",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "testPassword1!",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      },
      "mediaWidth": 874,
      "rowHeight": 60,
      "rowHeightBuffer": 18,
      "rowWidthIndent": 10,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "currentFormBool": false,
        "handleInputChange": [Function],
        "headerWidthBufferRight": 10,
        "heightRef": [MockFunction],
        "inputs": Object {
          "changePasswordNewPassword": Object {
            "errorMessage": "",
            "id": "changePasswordNewPassword",
            "parentId": "changePasswordForm",
            "value": "testPassword1!",
          },
          "changePasswordNewPassword2": Object {
            "errorMessage": "This password does not match your password above.",
            "id": "changePasswordNewPassword2",
            "parentId": "changePasswordForm",
            "value": "testPassword1!",
          },
          "changePasswordOldPassword": Object {
            "errorMessage": "",
            "id": "changePasswordOldPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
        },
        "mediaWidth": 874,
        "rowHeight": 60,
        "rowHeightBuffer": 18,
        "rowWidthIndent": 10,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
    "hydrateIn": undefined,
  },
}
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly and calls handleInputChange, with no new password error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormContainerChangePassword
    clearElement={[MockFunction]}
    currentForm="profileForm"
    handleInputValueError={[Function]}
    headerWidthBufferRight={10}
    height={0}
    heightRef={[MockFunction]}
    inputs={
      Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "Please enter your new password.",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      }
    }
    mediaWidth={874}
    rowHeight={60}
    rowHeightBuffer={18}
    rowWidthIndent={10}
    setHeight={
      [MockFunction] {
        "calls": Array [
          Array [
            "changePasswordForm",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    statusAuth={
      Object {
        "authStatusChangePassword": Object {
          "id": "authStatusChangePassword",
          "status": "IDLE",
        },
        "authStatusDeleteAccount": Object {
          "id": "authStatusDeleteAccount",
          "status": "SUCCESS",
        },
        "authStatusForgotPassword": Object {
          "id": "authStatusForgotPassword",
          "status": "IDLE",
        },
        "authStatusLogin": Object {
          "id": "authStatusLogin",
          "status": "IDLE",
        },
        "authStatusLoginMFA": Object {
          "id": "authStatusLoginMFA",
          "status": "IDLE",
        },
        "authStatusLogout": Object {
          "id": "authStatusLogout",
          "status": "SUCCESS",
        },
        "authStatusResetPassword": Object {
          "id": "authStatusResetPassword",
          "status": "IDLE",
        },
        "authStatusSignOutDevices": Object {
          "id": "authStatusSignOutDevices",
          "status": "IDLE",
        },
        "authStatusSignUp": Object {
          "id": "authStatusSignUp",
          "status": "IDLE",
        },
        "authStatusVerifyEmail": Object {
          "id": "authStatusVerifyEmail",
          "status": "IDLE",
        },
        "authStatusVerifyEmailLink": Object {
          "id": "authStatusVerifyEmailLink",
          "status": "IDLE",
        },
        "authStatusVerifyPhone": Object {
          "id": "authStatusVerifyPhone",
          "status": "IDLE",
        },
        "authStatusVerifyPhoneCode": Object {
          "id": "authStatusVerifyPhoneCode",
          "status": "IDLE",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "currentFormBool": false,
      "handleInputChange": [Function],
      "headerWidthBufferRight": 10,
      "heightRef": [MockFunction],
      "inputs": Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "Please enter your new password.",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      },
      "mediaWidth": 874,
      "rowHeight": 60,
      "rowHeightBuffer": 18,
      "rowWidthIndent": 10,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "currentFormBool": false,
        "handleInputChange": [Function],
        "headerWidthBufferRight": 10,
        "heightRef": [MockFunction],
        "inputs": Object {
          "changePasswordNewPassword": Object {
            "errorMessage": "Please enter your new password.",
            "id": "changePasswordNewPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
          "changePasswordNewPassword2": Object {
            "errorMessage": "",
            "id": "changePasswordNewPassword2",
            "parentId": "changePasswordForm",
            "value": "",
          },
          "changePasswordOldPassword": Object {
            "errorMessage": "",
            "id": "changePasswordOldPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
        },
        "mediaWidth": 874,
        "rowHeight": 60,
        "rowHeightBuffer": 18,
        "rowWidthIndent": 10,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
    "hydrateIn": undefined,
  },
}
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly and calls handleInputChange, with no password error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormContainerChangePassword
    clearElement={[MockFunction]}
    currentForm="profileForm"
    handleInputValueError={[Function]}
    headerWidthBufferRight={10}
    height={0}
    heightRef={[MockFunction]}
    inputs={
      Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "Please enter your password.",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      }
    }
    mediaWidth={874}
    rowHeight={60}
    rowHeightBuffer={18}
    rowWidthIndent={10}
    setHeight={
      [MockFunction] {
        "calls": Array [
          Array [
            "changePasswordForm",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    statusAuth={
      Object {
        "authStatusChangePassword": Object {
          "id": "authStatusChangePassword",
          "status": "IDLE",
        },
        "authStatusDeleteAccount": Object {
          "id": "authStatusDeleteAccount",
          "status": "SUCCESS",
        },
        "authStatusForgotPassword": Object {
          "id": "authStatusForgotPassword",
          "status": "IDLE",
        },
        "authStatusLogin": Object {
          "id": "authStatusLogin",
          "status": "IDLE",
        },
        "authStatusLoginMFA": Object {
          "id": "authStatusLoginMFA",
          "status": "IDLE",
        },
        "authStatusLogout": Object {
          "id": "authStatusLogout",
          "status": "SUCCESS",
        },
        "authStatusResetPassword": Object {
          "id": "authStatusResetPassword",
          "status": "IDLE",
        },
        "authStatusSignOutDevices": Object {
          "id": "authStatusSignOutDevices",
          "status": "IDLE",
        },
        "authStatusSignUp": Object {
          "id": "authStatusSignUp",
          "status": "IDLE",
        },
        "authStatusVerifyEmail": Object {
          "id": "authStatusVerifyEmail",
          "status": "IDLE",
        },
        "authStatusVerifyEmailLink": Object {
          "id": "authStatusVerifyEmailLink",
          "status": "IDLE",
        },
        "authStatusVerifyPhone": Object {
          "id": "authStatusVerifyPhone",
          "status": "IDLE",
        },
        "authStatusVerifyPhoneCode": Object {
          "id": "authStatusVerifyPhoneCode",
          "status": "IDLE",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "currentFormBool": false,
      "handleInputChange": [Function],
      "headerWidthBufferRight": 10,
      "heightRef": [MockFunction],
      "inputs": Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "Please enter your password.",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      },
      "mediaWidth": 874,
      "rowHeight": 60,
      "rowHeightBuffer": 18,
      "rowWidthIndent": 10,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "currentFormBool": false,
        "handleInputChange": [Function],
        "headerWidthBufferRight": 10,
        "heightRef": [MockFunction],
        "inputs": Object {
          "changePasswordNewPassword": Object {
            "errorMessage": "",
            "id": "changePasswordNewPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
          "changePasswordNewPassword2": Object {
            "errorMessage": "",
            "id": "changePasswordNewPassword2",
            "parentId": "changePasswordForm",
            "value": "",
          },
          "changePasswordOldPassword": Object {
            "errorMessage": "Please enter your password.",
            "id": "changePasswordOldPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
        },
        "mediaWidth": 874,
        "rowHeight": 60,
        "rowHeightBuffer": 18,
        "rowWidthIndent": 10,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
    "hydrateIn": undefined,
  },
}
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly and calls handleInputChange, with password not found 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormContainerChangePassword
    clearElement={[MockFunction]}
    currentForm="profileForm"
    handleInputValueError={[Function]}
    headerWidthBufferRight={10}
    height={0}
    heightRef={[MockFunction]}
    inputs={
      Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "This password does not match our records.",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "test",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      }
    }
    mediaWidth={874}
    rowHeight={60}
    rowHeightBuffer={18}
    rowWidthIndent={10}
    setHeight={
      [MockFunction] {
        "calls": Array [
          Array [
            "changePasswordForm",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    statusAuth={
      Object {
        "authStatusChangePassword": Object {
          "id": "authStatusChangePassword",
          "status": "IDLE",
        },
        "authStatusDeleteAccount": Object {
          "id": "authStatusDeleteAccount",
          "status": "SUCCESS",
        },
        "authStatusForgotPassword": Object {
          "id": "authStatusForgotPassword",
          "status": "IDLE",
        },
        "authStatusLogin": Object {
          "id": "authStatusLogin",
          "status": "IDLE",
        },
        "authStatusLoginMFA": Object {
          "id": "authStatusLoginMFA",
          "status": "IDLE",
        },
        "authStatusLogout": Object {
          "id": "authStatusLogout",
          "status": "SUCCESS",
        },
        "authStatusResetPassword": Object {
          "id": "authStatusResetPassword",
          "status": "IDLE",
        },
        "authStatusSignOutDevices": Object {
          "id": "authStatusSignOutDevices",
          "status": "IDLE",
        },
        "authStatusSignUp": Object {
          "id": "authStatusSignUp",
          "status": "IDLE",
        },
        "authStatusVerifyEmail": Object {
          "id": "authStatusVerifyEmail",
          "status": "IDLE",
        },
        "authStatusVerifyEmailLink": Object {
          "id": "authStatusVerifyEmailLink",
          "status": "IDLE",
        },
        "authStatusVerifyPhone": Object {
          "id": "authStatusVerifyPhone",
          "status": "IDLE",
        },
        "authStatusVerifyPhoneCode": Object {
          "id": "authStatusVerifyPhoneCode",
          "status": "IDLE",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "currentFormBool": false,
      "handleInputChange": [Function],
      "headerWidthBufferRight": 10,
      "heightRef": [MockFunction],
      "inputs": Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "This password does not match our records.",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "test",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      },
      "mediaWidth": 874,
      "rowHeight": 60,
      "rowHeightBuffer": 18,
      "rowWidthIndent": 10,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "currentFormBool": false,
        "handleInputChange": [Function],
        "headerWidthBufferRight": 10,
        "heightRef": [MockFunction],
        "inputs": Object {
          "changePasswordNewPassword": Object {
            "errorMessage": "This password does not match our records.",
            "id": "changePasswordNewPassword",
            "parentId": "changePasswordForm",
            "value": "test",
          },
          "changePasswordNewPassword2": Object {
            "errorMessage": "",
            "id": "changePasswordNewPassword2",
            "parentId": "changePasswordForm",
            "value": "",
          },
          "changePasswordOldPassword": Object {
            "errorMessage": "",
            "id": "changePasswordOldPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
        },
        "mediaWidth": 874,
        "rowHeight": 60,
        "rowHeightBuffer": 18,
        "rowWidthIndent": 10,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
    "hydrateIn": undefined,
  },
}
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly and calls handleInputChange, with undefined error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormContainerChangePassword
    clearElement={[MockFunction]}
    currentForm="profileForm"
    handleInputValueError={[Function]}
    headerWidthBufferRight={10}
    height={0}
    heightRef={[MockFunction]}
    inputs={
      Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "Please try your request again. If unsuccessful on subsequent attempts, please contact customer service.",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      }
    }
    mediaWidth={874}
    rowHeight={60}
    rowHeightBuffer={18}
    rowWidthIndent={10}
    setHeight={
      [MockFunction] {
        "calls": Array [
          Array [
            "changePasswordForm",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    statusAuth={
      Object {
        "authStatusChangePassword": Object {
          "id": "authStatusChangePassword",
          "status": "IDLE",
        },
        "authStatusDeleteAccount": Object {
          "id": "authStatusDeleteAccount",
          "status": "SUCCESS",
        },
        "authStatusForgotPassword": Object {
          "id": "authStatusForgotPassword",
          "status": "IDLE",
        },
        "authStatusLogin": Object {
          "id": "authStatusLogin",
          "status": "IDLE",
        },
        "authStatusLoginMFA": Object {
          "id": "authStatusLoginMFA",
          "status": "IDLE",
        },
        "authStatusLogout": Object {
          "id": "authStatusLogout",
          "status": "SUCCESS",
        },
        "authStatusResetPassword": Object {
          "id": "authStatusResetPassword",
          "status": "IDLE",
        },
        "authStatusSignOutDevices": Object {
          "id": "authStatusSignOutDevices",
          "status": "IDLE",
        },
        "authStatusSignUp": Object {
          "id": "authStatusSignUp",
          "status": "IDLE",
        },
        "authStatusVerifyEmail": Object {
          "id": "authStatusVerifyEmail",
          "status": "IDLE",
        },
        "authStatusVerifyEmailLink": Object {
          "id": "authStatusVerifyEmailLink",
          "status": "IDLE",
        },
        "authStatusVerifyPhone": Object {
          "id": "authStatusVerifyPhone",
          "status": "IDLE",
        },
        "authStatusVerifyPhoneCode": Object {
          "id": "authStatusVerifyPhoneCode",
          "status": "IDLE",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "currentFormBool": false,
      "handleInputChange": [Function],
      "headerWidthBufferRight": 10,
      "heightRef": [MockFunction],
      "inputs": Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "Please try your request again. If unsuccessful on subsequent attempts, please contact customer service.",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      },
      "mediaWidth": 874,
      "rowHeight": 60,
      "rowHeightBuffer": 18,
      "rowWidthIndent": 10,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "currentFormBool": false,
        "handleInputChange": [Function],
        "headerWidthBufferRight": 10,
        "heightRef": [MockFunction],
        "inputs": Object {
          "changePasswordNewPassword": Object {
            "errorMessage": "",
            "id": "changePasswordNewPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
          "changePasswordNewPassword2": Object {
            "errorMessage": "Please try your request again. If unsuccessful on subsequent attempts, please contact customer service.",
            "id": "changePasswordNewPassword2",
            "parentId": "changePasswordForm",
            "value": "",
          },
          "changePasswordOldPassword": Object {
            "errorMessage": "",
            "id": "changePasswordOldPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
        },
        "mediaWidth": 874,
        "rowHeight": 60,
        "rowHeightBuffer": 18,
        "rowWidthIndent": 10,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
    "hydrateIn": undefined,
  },
}
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly, with componentWillUpdate, componentDidUpdate, and componentWillUnmount 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormContainerChangePassword
    clearElement={
      [MockFunction] {
        "calls": Array [
          Array [
            "changePasswordForm",
          ],
          Array [
            "changePasswordForm",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    currentForm="profileForm"
    handleInputValueError={[Function]}
    headerWidthBufferRight={10}
    height={0}
    heightRef={[MockFunction]}
    inputs={
      Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      }
    }
    mediaWidth={874}
    rowHeight={60}
    rowHeightBuffer={18}
    rowWidthIndent={10}
    setHeight={
      [MockFunction] {
        "calls": Array [
          Array [
            "changePasswordForm",
          ],
          Array [
            "changePasswordForm",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    statusAuth={
      Object {
        "authStatusChangePassword": Object {
          "id": "authStatusChangePassword",
          "status": "IDLE",
        },
        "authStatusDeleteAccount": Object {
          "id": "authStatusDeleteAccount",
          "status": "SUCCESS",
        },
        "authStatusForgotPassword": Object {
          "id": "authStatusForgotPassword",
          "status": "IDLE",
        },
        "authStatusLogin": Object {
          "id": "authStatusLogin",
          "status": "IDLE",
        },
        "authStatusLoginMFA": Object {
          "id": "authStatusLoginMFA",
          "status": "IDLE",
        },
        "authStatusLogout": Object {
          "id": "authStatusLogout",
          "status": "SUCCESS",
        },
        "authStatusResetPassword": Object {
          "id": "authStatusResetPassword",
          "status": "IDLE",
        },
        "authStatusSignOutDevices": Object {
          "id": "authStatusSignOutDevices",
          "status": "IDLE",
        },
        "authStatusSignUp": Object {
          "id": "authStatusSignUp",
          "status": "IDLE",
        },
        "authStatusVerifyEmail": Object {
          "id": "authStatusVerifyEmail",
          "status": "IDLE",
        },
        "authStatusVerifyEmailLink": Object {
          "id": "authStatusVerifyEmailLink",
          "status": "IDLE",
        },
        "authStatusVerifyPhone": Object {
          "id": "authStatusVerifyPhone",
          "status": "IDLE",
        },
        "authStatusVerifyPhoneCode": Object {
          "id": "authStatusVerifyPhoneCode",
          "status": "IDLE",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "currentFormBool": false,
      "handleInputChange": [Function],
      "headerWidthBufferRight": 10,
      "heightRef": [MockFunction],
      "inputs": Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      },
      "mediaWidth": 874,
      "rowHeight": 60,
      "rowHeightBuffer": 18,
      "rowWidthIndent": 10,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "currentFormBool": false,
        "handleInputChange": [Function],
        "headerWidthBufferRight": 10,
        "heightRef": [MockFunction],
        "inputs": Object {
          "changePasswordNewPassword": Object {
            "errorMessage": "",
            "id": "changePasswordNewPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
          "changePasswordNewPassword2": Object {
            "errorMessage": "",
            "id": "changePasswordNewPassword2",
            "parentId": "changePasswordForm",
            "value": "",
          },
          "changePasswordOldPassword": Object {
            "errorMessage": "",
            "id": "changePasswordOldPassword",
            "parentId": "changePasswordForm",
            "value": "",
          },
        },
        "mediaWidth": 874,
        "rowHeight": 60,
        "rowHeightBuffer": 18,
        "rowWidthIndent": 10,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
    "hydrateIn": undefined,
  },
}
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly, with loading indicator 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormContainerChangePassword
    clearElement={[MockFunction]}
    currentForm="profileForm"
    handleInputValueError={[Function]}
    headerWidthBufferRight={10}
    height={0}
    heightRef={[MockFunction]}
    inputs={
      Object {
        "changePasswordNewPassword": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordNewPassword2": Object {
          "errorMessage": "",
          "id": "changePasswordNewPassword2",
          "parentId": "changePasswordForm",
          "value": "",
        },
        "changePasswordOldPassword": Object {
          "errorMessage": "",
          "id": "changePasswordOldPassword",
          "parentId": "changePasswordForm",
          "value": "",
        },
      }
    }
    mediaWidth={874}
    rowHeight={60}
    rowHeightBuffer={18}
    rowWidthIndent={10}
    setHeight={
      [MockFunction] {
        "calls": Array [
          Array [
            "changePasswordForm",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    statusAuth={
      Object {
        "authStatusChangePassword": Object {
          "id": "authStatusChangePassword",
          "status": "LOADING",
        },
        "authStatusDeleteAccount": Object {
          "id": "authStatusDeleteAccount",
          "status": "SUCCESS",
        },
        "authStatusForgotPassword": Object {
          "id": "authStatusForgotPassword",
          "status": "IDLE",
        },
        "authStatusLogin": Object {
          "id": "authStatusLogin",
          "status": "IDLE",
        },
        "authStatusLoginMFA": Object {
          "id": "authStatusLoginMFA",
          "status": "IDLE",
        },
        "authStatusLogout": Object {
          "id": "authStatusLogout",
          "status": "SUCCESS",
        },
        "authStatusResetPassword": Object {
          "id": "authStatusResetPassword",
          "status": "IDLE",
        },
        "authStatusSignOutDevices": Object {
          "id": "authStatusSignOutDevices",
          "status": "IDLE",
        },
        "authStatusSignUp": Object {
          "id": "authStatusSignUp",
          "status": "IDLE",
        },
        "authStatusVerifyEmail": Object {
          "id": "authStatusVerifyEmail",
          "status": "IDLE",
        },
        "authStatusVerifyEmailLink": Object {
          "id": "authStatusVerifyEmailLink",
          "status": "IDLE",
        },
        "authStatusVerifyPhone": Object {
          "id": "authStatusVerifyPhone",
          "status": "IDLE",
        },
        "authStatusVerifyPhoneCode": Object {
          "id": "authStatusVerifyPhoneCode",
          "status": "IDLE",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "alignItems": null,
      "alignSelf": null,
      "borderColorType": "border",
      "borderRadius": null,
      "borderStyle": null,
      "borderWidth": null,
      "boxSizing": null,
      "children": <BeatLoader
        color="#509236"
        loading={true}
        margin="2px"
        size="15px"
      />,
      "color": Object {},
      "display": null,
      "flex": null,
      "flexWrap": null,
      "height": "0px",
      "justifyContent": null,
      "margin": null,
      "mediaWidth": null,
      "minHeight": null,
      "minWidth": null,
      "overflowX": null,
      "overflowY": null,
      "padding": null,
      "position": null,
      "responsiveAlignItems": null,
      "responsiveJustifyContent": null,
      "responsiveMargin": null,
      "responsivePadding": null,
      "responsivePosition": null,
      "responsiveWidth": null,
      "separator": false,
      "themeColor": "primary",
      "width": "100%",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "color": "#509236",
        "loading": true,
        "margin": "2px",
        "size": "15px",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "alignItems": null,
        "alignSelf": null,
        "borderColorType": "border",
        "borderRadius": null,
        "borderStyle": null,
        "borderWidth": null,
        "boxSizing": null,
        "children": <BeatLoader
          color="#509236"
          loading={true}
          margin="2px"
          size="15px"
        />,
        "color": Object {},
        "display": null,
        "flex": null,
        "flexWrap": null,
        "height": "0px",
        "justifyContent": null,
        "margin": null,
        "mediaWidth": null,
        "minHeight": null,
        "minWidth": null,
        "overflowX": null,
        "overflowY": null,
        "padding": null,
        "position": null,
        "responsiveAlignItems": null,
        "responsiveJustifyContent": null,
        "responsiveMargin": null,
        "responsivePadding": null,
        "responsivePosition": null,
        "responsiveWidth": null,
        "separator": false,
        "themeColor": "primary",
        "width": "100%",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "color": "#509236",
          "loading": true,
          "margin": "2px",
          "size": "15px",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
    "hydrateIn": undefined,
  },
}
`;
